# ratatui_simple_logger

./: .gitlab-ci.yml  Cargo.toml
.github/workflows/: audit.yml
examples/: minimal.rs
src/: lib.rs
