[workspace.dependencies]
log = "0.4"

[package]
name = "ratatui_simple_logger"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sanpii/ratatui_simple_logger"
description = "Simple logger widget for ratatui"

[dependencies]
log.workspace = true
ratatui = "0.29"

[dev-dependencies.log]
workspace = true
features = ["std"]
